--- a/sg_gt_xcv.yaml
+++ b/sg_gt_xcv.yaml
@@ -1,18 +1,18 @@
 proxies:
 - name: "\U0001F1EE\U0001F1E9 Vless-umum-id"
   type: vless
-  server: support.zoom.us
+  server: 104.17.3.81
   port: 443
   uuid: berlian
   udp: true
   skip-cert-verify: true
   tls: true
-  servername: support.zoom.us.id.berlianst.my.id
+  servername: id.berlianst.my.id
   network: ws
   ws-opts:
     path: /vless
     headers:
-      Host: support.zoom.us.id.berlianst.my.id
+      Host: id.berlianst.my.id
 #=============vless=====================
 - name: "\U0001F1F8\U0001F1EC Vless-sg"
   type: vless
