--- a/sg_gt_xcv.yaml
+++ b/sg_gt_xcv.yaml
@@ -14,6 +14,7 @@ proxies:
     path: /vless
     headers:
       Host:  indo.berlian-cloud.my.id
+ #===========================================
 - name: Vless-gt-WS (CDN) Non TLS
   server: 104.17.3.81
   port: 80
@@ -29,3 +30,34 @@ proxies:
     headers:
       Host: indo.berlian-cloud.my.id
   udp: true
+#============================================  
+- name: bongkokVless-gt-WS (CDN) Non TLS
+  server: 104.17.3.81
+  port: 80
+  type: vless
+  uuid: ndasemumet
+  cipher: auto
+  tls: false
+  skip-cert-verify: false
+  servername: indo.bongkok.xyz
+  network: ws
+  ws-opts:
+    path: /vless
+    headers:
+      Host: indo.bongkok.xyz
+  udp: true
+#===============================
+- name: "\U0001F1EE\U0001F1E9 Vless-gt-id"
+  type: vless
+  server: 104.17.3.81
+  port: 443
+  uuid: ndasemumet
+  udp: true
+  skip-cert-verify: true
+  tls: true
+  servername:  indo.bongkok.xyz
+  network: ws
+  ws-opts:
+    path: /vless
+    headers:
+      Host:  indo.bongkok.xyz
