--- a/sg_gt_xcv.yaml
+++ b/sg_gt_xcv.yaml
@@ -29,3 +29,18 @@ proxies:
     path: /vless
     headers:
       Host:  indo.bongkok.xyz
+#==========================================      
+- name: "\U0001F1EE\U0001F1E9 bongkokVlessZomm-id"
+  type: vless
+  server: support.zoom.us
+  port: 443
+  uuid: ndasemumet
+  udp: true
+  skip-cert-verify: true
+  tls: true
+  servername:  support.zoom.us.bongkok.xyz
+  network: ws
+  ws-opts:
+    path: /vless
+    headers:
+      Host:  support.zoom.us.bongkok.xyz
