--- a/akun_wilcard.yaml
+++ b/akun_wilcard.yaml
@@ -1,30 +1,31 @@
 proxies:
-- name: "\U0001F1EE\U0001F1E9 Vless-umum-id"
+#=======================================
+- name: "\U0001F1EE\U0001F1E9 bongkok-gt-id"
   type: vless
   server: support.zoom.us
   port: 443
-  uuid: berlian
+  uuid: pusingmbah
   udp: true
   skip-cert-verify: true
   tls: true
-  servername: support.zoom.us.id.berlianst.my.id
+  servername:  support.zoom.us.bongkok.my.id
   network: ws
   ws-opts:
     path: /vless
     headers:
-      Host: support.zoom.us.id.berlianst.my.id
-#=============vless=====================
-- name: "\U0001F1F8\U0001F1EC Vless-gt-sg"
+      Host:  support.zoom.us.bongkok.my.id
+#==========================================      
+- name: "\U0001F1EE\U0001F1E9 bongkok-VlessZomm-id"
   type: vless
-  server: 104.17.3.81
+  server: support.zoom.us
   port: 443
-  uuid: berlian
+  uuid: ndasemumet
   udp: true
   skip-cert-verify: true
   tls: true
-  servername: sg.berliantst.com
+  servername:  support.zoom.us.bongkok.xyz
   network: ws
   ws-opts:
     path: /vless
     headers:
-      Host: sg.berliantst.com
+      Host:  support.zoom.us.bongkok.xyz
