--- a/sg_gt_biz.yaml
+++ b/sg_gt_biz.yaml
@@ -57,3 +57,37 @@ proxies:
     path: /vless
     headers:
       Host: ava.game.naver.com.berlianst.my.id
+
+#======simpanxcv=====
+
+- name: bongkokVlessGt-WS (CDN) Non TLS
+  server: 104.17.3.81
+  port: 80
+  type: vless
+  uuid: ndasemumet
+  cipher: auto
+  tls: false
+  skip-cert-verify: false
+  servername: indo.bongkok.xyz
+  network: ws
+  ws-opts:
+    path: /vless
+    headers:
+      Host: indo.bongkok.xyz
+  udp: true
+#=============4==================
+- name: "\U0001F1EE\U0001F1E9 bongkokVlessGt-id"
+  type: vless
+  server: 104.17.3.81
+  port: 443
+  uuid: ndasemumet
+  udp: true
+  skip-cert-verify: true
+  tls: true
+  servername:  indo.bongkok.xyz
+  network: ws
+  ws-opts:
+    path: /vless
+    headers:
+      Host:  indo.bongkok.xyz
+#=======================================
