--- a/sg_gt_xcv.yaml
+++ b/sg_gt_xcv.yaml
@@ -1,4 +1,5 @@
 proxies:
+#===========trojan==========
 - name: "\U0001F1EE\U0001F1E9depokTrGt"
   server: 104.17.3.81
   port: 443
@@ -12,4 +13,21 @@ proxies:
     path: /trojan-ws
     headers:
         Host: indo.bongkok.xyz
+#===============vmess================
+- name: Vmess-vmessDepok-WS TLS
+  type: vmess
+  server: 104.17.3.81
+  port: 443
+  uuid: ndasepusing
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: true
+  skip-cert-verify: true
+  servername: indo.bongkok.xyz
+  network: ws
+  ws-opts:
+    path: /vmess
+    headers:
+      Host: indo.bongkok.xyz
 
