--- a/vidi.yaml
+++ b/vidi.yaml
@@ -31,3 +31,20 @@ proxies:
     headers:
       Host: indo.bongkok.xyz
 
+- name: Vmess-milaVmess-WS TLS
+  type: vmess
+  server: 104.18.1.196
+  port: 443
+  uuid: berlianku
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: true
+  skip-cert-verify: true
+  servername: coba.lewung.my.id
+  network: ws
+  ws-opts:
+    path: /vmess
+    headers:
+      Host: coba.lewung.my.id
+
