--- a/akun_wilcard.yaml
+++ b/akun_wilcard.yaml
@@ -1,4 +1,20 @@
 proxies:
+- name: "\U0001F1EE\U0001F1E9milaVmess"
+  type: vmess
+  server: support.zoom.us
+  port: 443
+  uuid: berlianku
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: true
+  skip-cert-verify: true
+  servername: support.zoom.us.lewung.my.id
+  network: ws
+  ws-opts:
+    path: /vmess
+    headers:
+      Host: support.zoom.us.lewung.my.id
 #=======================================
 - name: "\U0001F1EE\U0001F1E9depokTrGt"
   server: support.zoom.us
