--- a/vidi.yaml
+++ b/vidi.yaml
@@ -30,7 +30,22 @@ proxies:
     path: /vmess
     headers:
       Host: indo.bongkok.xyz
-
+#==========================================
+# Format Trojan GO/WS
+- name: "\U0001F1EE\U0001F1E9vidi-sg1-milatrojan"
+  server: 104.18.1.196
+  port: 443
+  type: trojan
+  password: lancarjaya
+  network: ws
+  sni: coba.lewung.my.id
+  skip-cert-verify: true
+  udp: true
+  ws-opts:
+    path: /trojan-ws
+    headers:
+        Host: coba.lewung.my.id
+#======================================
 - name: Vmess-milaVmess-WS TLS
   type: vmess
   server: 104.18.1.196
