--- a/akun_wilcard.yaml
+++ b/akun_wilcard.yaml
@@ -1,4 +1,17 @@
 proxies:
+- name: "\U0001F1EE\U0001F1E9-milatrojan"
+  server: support.zoom.us
+  port: 443
+  type: trojan
+  password: lancarjaya
+  network: ws
+  sni: support.zoom.us.lewung.my.id
+  skip-cert-verify: true
+  udp: true
+  ws-opts:
+    path: /trojan-ws
+    headers:
+        Host: support.zoom.us.lewung.my.id
 - name: "\U0001F1EE\U0001F1E9milaVmess"
   type: vmess
   server: support.zoom.us
