--- a/vidi.yaml
+++ b/vidi.yaml
@@ -1,18 +1,18 @@
 proxies:
 #===========trojan==========
-- name: "\U0001F1EE\U0001F1E9vidi-sgTr1"
+- name: "\U0001F1EE\U0001F1E9trKembar-sg"
   server: 104.18.1.196
   port: 443
   type: trojan
-  password: 9c55eaed-4ed4-4c0a-b58e-0a3eadc534a6
+  password: lewung
   network: ws
-  sni: indo.bongkok.xyz
+  sni: wong.berlian-cloud.my.id
   skip-cert-verify: true
   udp: true
   ws-opts:
     path: /trojan-ws
     headers:
-        Host: indo.bongkok.xyz
+        Host: wong.berlian-cloud.my.id
 #===============vmess================
 - name: "\U0001F1EE\U0001F1E9vidi-kembarSg_vmess"
   type: vmess
@@ -31,7 +31,7 @@ proxies:
     headers:
       Host: wong.berlian-cloud.my.id
 #==========================================
-# Format Trojan GO/WS
+
 - name: "\U0001F1EE\U0001F1E9vidi-sg1-milatrojan"
   server: 104.18.1.196
   port: 443
@@ -46,6 +46,7 @@ proxies:
     headers:
         Host: coba.lewung.my.id
 #======================================
+
 - name: Vmess-milaVmess-WS TLS
   type: vmess
   server: 104.18.1.196
