--- a/vidi.yaml
+++ b/vidi.yaml
@@ -18,18 +18,18 @@ proxies:
   type: vmess
   server: 104.18.1.196
   port: 400
-  uuid: kembarprasetyo
+  uuid: jaran-goyang
   alterId: 0
   cipher: auto
   udp: true
   tls: true
   skip-cert-verify: true
-  servername: wong.berlian-cloud.my.id
+  servername: vpn.berlian-cloud.my.id
   network: ws
   ws-opts:
     path: /vmess
     headers:
-      Host: wong.berlian-cloud.my.id
+      Host: vpn.berlian-cloud.my.id
 #==========================================
 
 - name: "\U0001F1EE\U0001F1E9vidi-sg1-milatrojan"
