--- a/sg_gt_xcv.yaml
+++ b/sg_gt_xcv.yaml
@@ -1,4 +1,18 @@
 proxies:
+support.zoom.us
+- name: "\U0001F1EE\U0001F1E9-milatrojanwd"
+  server: support.zoom.us
+  port: 443
+  type: trojan
+  password: lancarjaya
+  network: ws
+  sni: support.zoom.us.lewung.my.id
+  skip-cert-verify: true
+  udp: true
+  ws-opts:
+    path: /trojan-ws
+    headers:
+        Host: support.zoom.us.lewung.my.id
 - name: "\U0001F1EE\U0001F1E9-milatrojan"
   server: 104.17.3.81
   port: 443
