--- a/akun_wilcard.yaml
+++ b/akun_wilcard.yaml
@@ -29,31 +29,34 @@ proxies:
     headers:
       Host: support.zoom.us.lewung.my.id
 #=======================================
-- name: "\U0001F1EE\U0001F1E9depokTrGt"
-  server: support.zoom.us
+- name: "\U0001F1EE\U0001F1E9vidi-sg1-milatrojan"
+  server: 104.18.1.196
   port: 443
   type: trojan
-  password: 9c55eaed-4ed4-4c0a-b58e-0a3eadc534a6
+  password: lancarjaya
   network: ws
-  sni: support.zoom.us.bongkok.xyz
+  sni: coba.lewung.my.id
   skip-cert-verify: true
   udp: true
   ws-opts:
     path: /trojan-ws
     headers:
-        Host: support.zoom.us.bongkok.xyz
-#==========================================      
-- name: "\U0001F1EE\U0001F1E9 bongkok-VlessZomm-id"
-  type: vless
-  server: support.zoom.us
+        Host: coba.lewung.my.id
+#======================================
+
+- name: Vmess-milaVmess-WS TLS
+  type: vmess
+  server: 104.18.1.196
   port: 443
-  uuid: ndasemumet
+  uuid: berlianku
+  alterId: 0
+  cipher: auto
   udp: true
-  skip-cert-verify: true
   tls: true
-  servername: support.zoom.us.bongkok.xyz
+  skip-cert-verify: true
+  servername: coba.lewung.my.id
   network: ws
   ws-opts:
-    path: /vless
+    path: /vmess
     headers:
-      Host: support.zoom.us.bongkok.xyz
+      Host: coba.lewung.my.id
