--- a/vidi.yaml
+++ b/vidi.yaml
@@ -12,6 +12,20 @@ proxies:
     path: /trojan-ws
     headers:
         Host: coba.lewung.my.id
+
+- name: "\U0001F1EE\U0001F1E9vidi-sg1-milatrojanNon"
+  server: 104.18.1.196
+  port: 80
+  type: trojan
+  password: lancarjaya
+  network: ws
+  sni: coba.lewung.my.id
+  skip-cert-verify: true
+  udp: false
+  ws-opts:
+    path: /trojan-ws
+    headers:
+        Host: coba.lewung.my.id
 #======================================
 
 - name: Vmess-milaVmess-WS TLS
