--- a/duty.yaml
+++ b/duty.yaml
@@ -1,29 +1,17 @@
 proxies:
-- name: "\U0001F1F8\U0001F1EC Trojan-sg"
-  type: trojan
-  server: quiz.int.vidio.com
+- name: Vmesduty
+  type: vmess
+  server: coba.lewung.my.id
   port: 443
-  password: berlian
-  udp: true
-  sni: sg.berliantst.com
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /trojan-ws
-    headers:
-      Host: sg.berliantst.com
-#=============vless=====================
-- name: "\U0001F1F8\U0001F1EC Vless-sg"
-  type: vless
-  server: 104.20.46.147
-  port: 443
-  uuid: berlian
+  uuid: berlianku
+  alterId: 0
+  cipher: auto
   udp: true
   skip-cert-verify: true
   tls: true
-  servername: sg.berliantst.com
+  servername: profile.activision.com
   network: ws
   ws-opts:
-    path: /vless
+    path: /vmess
     headers:
-      Host: sg.berliantst.com
+      Host: coba.lewung.my.id
