--- a/vidi.yaml
+++ b/vidi.yaml
@@ -13,7 +13,7 @@ proxies:
     headers:
         Host: coba.lewung.my.id
 
-- name: Vmess-tiyo_sg-WS TLS
+- name: Vmess-tiyo_Gt-WS TLS
   type: vmess
   server: 104.18.1.196
   port: 443
