--- a/vidi.yaml
+++ b/vidi.yaml
@@ -3,15 +3,15 @@ proxies:
   server: 104.18.1.196
   port: 443
   type: trojan
-  password: lancarjaya
+  password: ndasmumet
   network: ws
-  sni: coba.lewung.my.id
+  sni: kembar.berliantst.com
   skip-cert-verify: true
   udp: true
   ws-opts:
     path: /trojan-ws
     headers:
-        Host: coba.lewung.my.id
+        Host: kembar.berliantst.com
 
 - name: Vmess-tiyo_Gt-WS TLS
   type: vmess
@@ -36,16 +36,16 @@ proxies:
   type: vmess
   server: 104.18.1.196
   port: 443
-  uuid: berlianku
+  uuid: kontolpesok
   alterId: 0
   cipher: auto
   udp: true
   tls: true
   skip-cert-verify: true
-  servername: coba.lewung.my.id
+  servername: kembar.berliantst.com
   network: ws
   ws-opts:
     path: /vmess
     headers:
-      Host: coba.lewung.my.id
+      Host: kembar.berliantst.com
 
