--- a/duty.yaml
+++ b/duty.yaml
@@ -1,17 +1,33 @@
 proxies:
-- name: "\U0001F1EE\U0001F1E9Vmesduty"
-  type: vmess
-  server: coba.lewung.my.id
+- name: "\U0001F1EE\U0001F1E9vidi-sg1-milatrojan"
+  server: kembar.berliantst.com
   port: 443
-  uuid: berlianku
+  type: trojan
+  password: ndasmumet
+  network: ws
+  sni: profile.activision.com
+  skip-cert-verify: true
+  udp: true
+  ws-opts:
+    path: /trojan-ws
+    headers:
+        Host: kembar.berliantst.com
+
+#======================================
+
+- name: Vmess-milaVmess-WS TLS
+  type: vmess
+  server: kembar.berliantst.com
+  port: 443
+  uuid: kontolpesok
   alterId: 0
   cipher: auto
   udp: true
-  skip-cert-verify: true
   tls: true
+  skip-cert-verify: true
   servername: profile.activision.com
   network: ws
   ws-opts:
     path: /vmess
     headers:
-      Host: coba.lewung.my.id
+      Host: kembar.berliantst.com
