--- a/vidi.yaml
+++ b/vidi.yaml
@@ -1,7 +1,7 @@
 proxies:
 - name: "\U0001F1EE\U0001F1E9vidi-gt-vmlewung"
   type: vmess
-  server: vpn.berlian.web.id
+  server: 104.18.1.196
   port: 443
   uuid: manganterus
   alterId: 0
