--- a/vidi.yaml
+++ b/vidi.yaml
@@ -1,9 +1,23 @@
 proxies:
+- name: "\U0001F1EE\U0001F1E9TrLiwung"
+  server: 104.18.1.196
+  port: 443
+  type: trojan
+  password: lilikprihatiningsih
+  network: ws
+  sni: vpn.berlian.web.id
+  skip-cert-verify: true
+  udp: true
+  ws-opts:
+    path: /trojan-ws
+    headers:
+        Host: vpn.berlian.web.id
+
 - name: "\U0001F1EE\U0001F1E9vidi-gt-vmlewung"
   type: vmess
   server: 104.18.1.196
   port: 443
-  uuid: manganterus
+  uuid: lilikprihatiningsih
   alterId: 0
   cipher: auto
   udp: true
