--- a/vidi.yaml
+++ b/vidi.yaml
@@ -34,30 +34,30 @@ proxies:
   server: 104.18.1.196
   port: 443
   type: trojan
-  password: ndasmumet
+  password: sarmila
   network: ws
-  sni: kembar.berliantst.com
+  sni: sg.lewung.my.id
   skip-cert-verify: true
   udp: true
   ws-opts:
     path: /trojan-ws
     headers:
-        Host: kembar.berliantst.com
+        Host: sg.lewung.my.id
 
 - name: Vmess-milaVmess-WS TLS
   type: vmess
   server: 104.18.1.196
   port: 443
-  uuid: kontolpesok
+  uuid: sarmila
   alterId: 0
   cipher: auto
   udp: true
   tls: true
   skip-cert-verify: true
-  servername: kembar.berliantst.com
+  servername: sg.lewung.my.id
   network: ws
   ws-opts:
     path: /vmess
     headers:
-      Host: kembar.berliantst.com
+      Host: sg.lewung.my.id
 
