--- a/vidi.yaml
+++ b/vidi.yaml
@@ -93,7 +93,7 @@ proxies:
       Host: sg.lewung.my.id
 
 # ======= Edukasi =========      
-- name: "\U0001F1F8\U0001F1EC lewungTrSg-gt"
+- name: "\U0001F1F8\U0001F1EC lewungTrSgEdu-gt"
   server: 104.17.3.81
   port: 443
   type: trojan
@@ -107,7 +107,7 @@ proxies:
     headers:
         Host: sg.lewung.my.id
 
-- name: "\U0001F1F8\U0001F1EC lewungVmSg-gt"
+- name: "\U0001F1F8\U0001F1EC lewungVmSgEdu-gt"
   type: vmess
   server: 104.17.3.81
   port: 443
