--- a/vidi.yaml
+++ b/vidi.yaml
@@ -1,4 +1,17 @@
 proxies:
+- name: "\U0001F1EE\U0001F1E9 darurat-gt"
+  server: 104.21.94.111
+  port: 443
+  type: trojan
+  password: lilikprihatiningsih
+  network: ws
+  sni: vpn.berlian.web.id
+  skip-cert-verify: true
+  udp: true
+  ws-opts:
+    path: /trojan-ws
+    headers:
+        Host: vpn.berlian.web.id
 - name: "\U0001F1EE\U0001F1E9 lewungTrId-gt"
   server: 104.18.1.196
   port: 443
